new file:   bin/gui/RegistroPanel$1.class 	new file:   bin/gui/RegistroPanel.class 	modified:   proyecto/bin/gui/LoginPanel$1.class 	modified:   proyecto/bin/gui/LoginPanel.class 	modified:   proyecto/bin/main/MainFrame.class 	modified:   proyecto/src/main/MainFrame.java